@@ -1,7 +1,3 @@
-EBUILD xemacs-packages-all-2007.04.27.ebuild 3632 RMD160 04b53f56bd7c6ceb65281b0c78ac834c978d1501 SHA1 003e9f047596aca1c7ee43b696fb89019045bf84 SHA256 d0696b60bfd932ad62bd560328d62599d9edec9ea246a4adfd19cd9f6783a45a
-MISC ChangeLog 131 RMD160 0dec34f9e3ee4f9fafdc8c4d542f16abf323f978 SHA1 5834c847688cfc7c72132fa4f45cccab899b4413 SHA256 5670d67096ca0c44b51eb1e8f1779637286865d3d16c5f22ae5bcafa1d7e0dcf
-MISC ChangeLog~ 3666 RMD160 66cb4dd33af7e01d9cddb6d426cf6a23e4ed4cd5 SHA1 69f1df908689e7aa10662bec32bbec9a9f50a2d1 SHA256 3106e6ce482f8b35c9129cf09af41fb9634263ed1186dec32ef1bc8436f62b34
-MISC deps 3343 RMD160 e82b8773622510094424f884fde4cd5a528411a5 SHA1 f436fafc5c61f5173a8b02bdfb4bfa3c2fb059d6 SHA256 3ef0ee94a1569c366345ed928c62a111c03c8e4e265d2ea527679fe552525641
+EBUILD xemacs-packages-all-2007.04.27.ebuild 3650 RMD160 eb6f97a1c86cf6bd671a92c9872311cc270105b9 SHA1 d1ab40a97b670022dd8fd3281ab17318a1427cd3 SHA256 9fd07c8d8714545e0594b4864a922f2e3587342f12996474452a8a040237985e
+MISC ChangeLog 419 RMD160 936025ef0a7a632b475bb21f4f00921797ed0434 SHA1 9c3a2099c1216d9bcdf5128fef557dc6869eaa86 SHA256 11937c74d87b762159fe2a360e5ddd568813c5d0af3ecfadd96d020b12d145d9
 MISC metadata.xml 88 RMD160 591c1a9ffbec098b560e6fa12a8f0b0158b6ffd3 SHA1 808b9788b60a08e07078ce9d5e71ca787257f4e4 SHA256 8562b125484f215250ff80f49648e0002c12c63b64f4d9f512b25581b632a3d1
-MISC metadata.xml.~1~ 1094 RMD160 7f7baeb1d2d31dca2e0f0d14f6593c4bbcbb1b79 SHA1 21dd90169d4f495c5d2517a211dc26502d137832 SHA256 bb8653e8b711c9d85350052f8e38318ebea7a85aeefe2525394510bff6222e07
-MISC xemacs-packages-all-2007.04.27.ebuild.~1~ 7554 RMD160 2f0a34dd46478393e255e3c6b56286aaca7405c2 SHA1 677f224e6553c288b7154738348ed6e02ed6e5b1 SHA256 71bec5a82bd313a9371e2ed79df169a72c7c172b058a7368d54b74abca1b165e
