@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Apr 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
+  Remove duplicate ~x86, sort packages alphabetically.
+
   22 Mar 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Initial ebuild as a replacement for the sumo packages from upstream, so that
   we can start fixing #23949.
